// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaretBox passes the "bg" prop to both <Box> and <Caret> 1`] = `
.emotion-1 {
  position: relative;
  background-color: #d73a49;
  border: 1px solid;
  border-color: #e1e4e8;
  border-radius: 3px;
}

.emotion-0 {
  background-color: #d73a49;
}

<div
  className="emotion-1"
>
  <svg
    className="emotion-0"
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="red.5"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="gray.2"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`CaretBox passes the "borderColor" prop to both <Box> and <Caret> 1`] = `
.emotion-0 {
  background-color: #fff;
}

.emotion-1 {
  position: relative;
  background-color: #fff;
  border: 1px solid;
  border-color: #d73a49;
  border-radius: 3px;
}

<div
  className="emotion-1"
>
  <svg
    className="emotion-0"
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="white"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="red.5"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`CaretBox renders a <Caret> in <Box> with relative positioning 1`] = `
.emotion-1 {
  position: relative;
  background-color: #fff;
  border: 1px solid;
  border-color: #e1e4e8;
  border-radius: 3px;
}

.emotion-0 {
  background-color: #fff;
}

<div
  className="emotion-1"
>
  <svg
    className="emotion-0"
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="white"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="gray.2"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;
